<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="id.nian.hitungluas.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/panjang"
            android:textSize="23dp"
            android:id="@+id/lbl_panjang"
            android:layout_width="130dp"
            android:layout_height="match_parent" />
        <android.support.v7.widget.AppCompatEditText
            android:hint="@string/hint_panjang"
            android:id="@+id/txt_panjang"
            android:layout_marginLeft="20dp"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/lebar"
            android:textSize="23dp"
            android:id="@+id/lbl_lebar"
            android:layout_width="130dp"
            android:layout_height="match_parent" />
        <android.support.v7.widget.AppCompatEditText
            android:hint="@string/hint_lebar"
            android:id="@+id/txt_lebar"
            android:inputType="numberDecimal"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:text="@string/hitung"
        android:id="@+id/cmd_hitung"
        android:onClick="hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:background="#000000" />
    <TextView
        android:id="@+id/lbl_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp" />
</LinearLayout>
